Style cleanup and text fix

--- a/savannahoffice.html
+++ b/savannahoffice.html
@@ -33,8 +33,10 @@
                 <section class="staff">
                     <h2>Andrew Wilford, Senior Partner</h2>
                     <aside><img src="img/Andrewsm.jpg" alt="Andrew Wilford, headshot" /></aside>
-                    <p>Mr. Myers has a BS in chemistry from Rutgers University (1971) and a JD in law from Seton Hall Law School (1975).</p>
-                    <p>He has been with the firm since 1975 and specializes in chemical matters, in particular pharmaceutical chemistry, and oversees our trademark department.</p>
+                    <p>Mr. Wilford has an AB in languages from Rutgers University (1967) and studied for three years at The Newark College of Engineering (now the NJ Institute of Technology).</p>
+                    <p>He received a JD in law from Seton Hall Law School (1975).</p>
+                    <p>He has been associated with <strong>KF ROSS PC</strong> since 1968 and specializes in electrical matters and mechanics as well as operating the firm.</p>
+                    <p>Mr. Wilford speaks fluent French and German and has a reading knowledge of Italian and Spanish.</p>
                 </section>
                 <section class="staff">
                     <h2>Our Savannah staff</h2>
