Updated staff info

--- a/bronxoffice.html
+++ b/bronxoffice.html
@@ -43,7 +43,7 @@
                         <li>JoAnne Russakoff: Finance Manager</li>
                         <li>Linda Berrios: Trademark Paralegal</li>
                         <li>MacKay Wilford: Foreign Filing Paralegal</li>
-                        <li>Elsie Reyes: Docketing and Billing Clerk</li>
+                        <li>Elsie Reyes: Docketing &amp; Billing Clerk</li>
                     </ul>
                 </section>
                 <section class="vcard">
