--- a/savannahoffice.html
+++ b/savannahoffice.html
@@ -43,7 +43,7 @@
                     <aside><img src="" alt="Staff image?" /></aside>
                     <ul>
                         <li>Brooke Wilford: Office &amp; Projects Manager</li>
-                        <li>Rolanda</li>
+                        <li>Rolanda Powell: Administrative Assistant &amp; Communication Manager</li>
                     </ul>
                 </section>
                 <section class="vcard">
