Updated copy, added image

--- a/bronxoffice.html
+++ b/bronxoffice.html
@@ -57,7 +57,7 @@
                         <span class="locality">Bronx</span>, <span class="region">NY</span>, <span class="postal-code">10471</span>
                         <span class="country-name">United Staets</span>
                         <div class="email">
-                            Email: <a href="mailto:email@kfrpc.com">email@kfrpc.com</a>
+                            Email: <a href="mailto:newyork@kfrpc.com">newyork@kfrpc.com</a>
                         </div>
                         <div class="tel">
                             <span class="type">Fax</span> +1-718-601-1099
