--- a/savannahoffice.html
+++ b/savannahoffice.html
@@ -40,11 +40,11 @@
                 </section>
                 <section class="staff">
                     <h2>Our Savannah staff</h2>
-                    <aside><img src="" alt="Staff image?" /></aside>
                     <ul>
                         <li>Brooke Wilford: Office &amp; Projects Manager</li>
                         <li>Rolanda Powell: Administrative Assistant &amp; Communication Manager</li>
                     </ul>
+                    <aside><img src="img/sav_xmas_2011.jpg" alt="Savannah Office, Chrismas 2011" /></aside>
                 </section>
                 <section class="vcard">
                     <div>
@@ -58,7 +58,7 @@
                         <span class="country-name">United Staets</span>
                         <div class="email">
                             Email:
-                            <a href="mailto:email@kfrpc.com">email@kfrpc.com</a>
+                            <a href="mailto:savannah@kfrpc.com">savannah@kfrpc.com</a>
                         </div>
                         <div class="tel">
                             <span class="type">Fax</span> +1-718-601-1099
