--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body>
+    <body lang="en">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
@@ -32,9 +32,9 @@
                 <section class="lang-rows">
                 <h1>About Us</h1>
                     <div class="tabbed">
-                        <h2 id="tab-en" class="current">English</h2>
-                        <h2 id="tab-de">Deutsche</h2>
-                        <h2 id="tab-fr">Français</h2>
+                        <h2 lang="en" id="tab-en" class="current">English</h2>
+                        <h2 lang="fr" id="tab-de">Deutsche</h2>
+                        <h2 lang="de" id="tab-fr">Français</h2>
                     </div>
                     <section lang="en">
                         <aside><img src="img/gshot.jpg" /></aside>
