--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <section lang="fr" class="hidden">
                         <aside><img src="img/gshot.jpg" /></aside>
                         <p><strong>KF ROSS PC</strong> a été fondée en 1948 par le regretté Karl F Ross. Il fut rejoint, en 1958, par Herbert Dubno, aujourd'hui décédé. Nous sommes spécialisés dans la préparation et les procédures de demandes de brevets et de dépôts de marques.</p>
-                        <p>Nous nous occupons, chaque année, d'environ de 200 nouveaux brevets et 100 à 150 demandes de dépôts de nouvelles marques. Nous pouvons aussi vous assister dans les litiges complexes jusqu'en Cour d'Appel dans le système juridique américain des Cours Fédérales.</p>
+                        <p>Nous nous occupons, chaque année, d'environ 200 nouveaux brevets et 100 à 150 demandes de dépôts de nouvelles marques. Nous pouvons aussi vous assister dans les litiges complexes jusqu'en Cour d'Appel dans le système juridique américain des Cours Fédérales.</p>
                         <p>Le plus gros de nos activités provient de l'étranger, notamment d'Allemagne, d'Italie, de France, de Hongrie et du Japon. Nous savons aussi traiter les demandes et la documentation rédigées en Allemand, Français et Italien. Nous disposons d'accords avec un large réseau d'entreprises spécialisées en dépôts de marques et de brevets, situées tant en Europe qu'au Japon, en Australie, au Canada et en Amérique du Sud. Ces correspondants nous représentent dans leurs pays.</p>
                         <p>Nos partenaires sont membres des Barreaux de New York, du New Jersey, de la Georgia et du New Hampshire.</p>
                     </section>
