--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <aside><img src="img/gshot.jpg" /></aside>
                         <p><strong>KF ROSS PC</strong>, founded as the Firm of Karl F. Ross PC by the late Karl F. Ross in 1948 and joined by the late Herbert Dubno in 1958, specializes in the preparation and prosecution of patent and trademark applications.</p>
                         <p>Each year, <strong>KF ROSS PC</strong> files about 200 new patent applications and 100-150 new trademark applications. We also provide assistance in complex litigation matters up to the appeal level in the federal-court system.</p>
-                        <p>The majority of our work work originates in Germany, Austria, Italy, Hungary, France and Japan and we are able to deal directly with instructions and documents in German, French and Italian. We have extensive connections and working arrangements with patent firms in Europe, Japan, Australia, Canada and South America for the filing of patent and trademark applications in those countries.</p>
+                        <p>The majority of our work originates in Germany, Austria, Italy, Hungary, France and Japan and we are able to deal directly with instructions and documents in German, French and Italian. We have extensive connections and working arrangements with patent firms in Europe, Japan, Australia, Canada and South America for the filing of patent and trademark applications in those countries.</p>
                         <p>Our partners are members of the bars of New York, New Jersey, Georgia and New Hampshire.</p>
                     </section>
                     <section lang="de" class="hidden">
