--- a/savannahoffice.html
+++ b/savannahoffice.html
@@ -52,16 +52,16 @@
                     </div>
                     <div class="adr">
                         <div class="street-address">
-                            311 East York St
+                            311 East York Street
                         </div>
                         <span class="locality">Savannah</span>, <span class="region">GA</span>, <span class="postal-code">31401</span>
-                        <span class="country-name">United Staets</span>
+                        <span class="country-name">United States</span>
                         <div class="email">
                             Email:
                             <a href="mailto:savannah@kfrpc.com">savannah@kfrpc.com</a>
                         </div>
                         <div class="tel">
-                            <span class="type">Fax</span> +1-718-601-1099
+                            <span class="type">Fax</span> +1-912-344-4472
                         </div>
                     </div>
                 </section>
