--- a/bronxoffice.html
+++ b/bronxoffice.html
@@ -54,7 +54,7 @@
                             Box 900
                         </div>
                         <span class="locality">Bronx</span>, <span class="region">NY</span>, <span class="postal-code">10471</span>
-                        <span class="country-name">United Staets</span>
+                        <span class="country-name">United States</span>
                         <div class="email">
                             Email: <a href="mailto:newyork@kfrpc.com">newyork@kfrpc.com</a>
                         </div>
