--- a/content/index.html
+++ b/content/index.html
@@ -1,35 +1,60 @@
 ---
-title:
+title: About Us
 ---
 
-<div class="main">
-    <section class="lang-rows">
-        <h1>About Us</h1>
-        <div class="tabbed">
-            <h2 lang="en" id="tab-en" class="current">English</h2>
-            <h2 lang="fr" id="tab-de">Deutsche</h2>
-            <h2 lang="de" id="tab-fr">Français</h2>
-        </div>
-        <section lang="en">
-            <aside><img src="img/gshot.jpg" /></aside>
-            <p><strong>KF ROSS PC</strong>, founded as the Firm of Karl F. Ross PC by the late Karl F. Ross in 1948 and joined by the late Herbert Dubno in 1958, specializes in the preparation and prosecution of patent and trademark applications.</p>
-            <p>Each year, <strong>KF ROSS PC</strong> files about 200 new patent applications and 100-150 new trademark applications. We also provide assistance in complex litigation matters up to the appeal level in the federal-court system.</p>
-            <p>The majority of our work originates in Germany, Austria, Italy, Hungary, France and Japan and we are able to deal directly with instructions and documents in German, French and Italian. We have extensive connections and working arrangements with patent firms in Europe, Japan, Australia, Canada and South America for the filing of patent and trademark applications in those countries.</p>
-            <p>Our partners are members of the bars of New York, New Jersey, Georgia and New Hampshire.</p>
-        </section>
-        <section lang="de" class="hidden">
-            <aside><img src="img/gshot.jpg" /></aside>
-            <p><strong>KF ROSS PC</strong> ist spezialisiert auf Erwerb, Aufrechterhaltung und Durchsetzung gewerblicher Patent- und Markenanmeldungen. Die heute aus zwei Partnern bestehende Kanzlei wurde 1948 von Karl. F. Ross gegründet, 1958 trat Herbert Dubno in die Kanzlei ein.</p>
-            <p>Jährlich reicht <strong>KF ROSS PC</strong> ungefahr 200 neue Patentanmeldungen und etwa 100 bis 150 neue Markenanmeldungen beim US amerikanischen Patent- und Markenamt ein. Darüber hinaus unterstützen wir unsere Mandanten bei komplexen Rechtsstreitigkeiten bis hin zur Berufungsinstanz auf Bundesebene.</p>
-            <p>Die Mehrheit unserer Mandanten kommen aus Deutschland und Österreich, sowie Italien, Ungarn, Frankreich, und Japan. Anweisungen und Dokumente auf Deutsch, Französisch und Italienisch können direkt von uns bearbeitet werden. Wir haben weitreichende Kontakte zu Korrespondenzkanzleien für Patent- und Markenrecht in Europa, Japan, Australien, Kanada und Südamerika, somit können wir für unsere Mandanten in den genannten Ländern ebenfalls Patent- und Markenanmeldungen durchführen.</p>
-            <p>Unsere Partner sind Mitglieder bei den Anwaltsvereinigungen in New York, New Jersey, Georgia und/oder New Hampshire.</p>
-        </section>
-        <section lang="fr" class="hidden">
-            <aside><img src="img/gshot.jpg" /></aside>
-            <p><strong>KF ROSS PC</strong> a été fondée en 1948 par le regretté Karl F Ross. Il fut rejoint, en 1958, par Herbert Dubno, aujourd'hui décédé. Nous sommes spécialisés dans la préparation et les procédures de demandes de brevets et de dépôts de marques.</p>
-            <p>Nous nous occupons, chaque année, d'environ 200 nouveaux brevets et 100 à 150 demandes de dépôts de nouvelles marques. Nous pouvons aussi vous assister dans les litiges complexes jusqu'en Cour d'Appel dans le système juridique américain des Cours Fédérales.</p>
-            <p>Le plus gros de nos activités provient de l'étranger, notamment d'Allemagne, d'Italie, de France, de Hongrie et du Japon. Nous savons aussi traiter les demandes et la documentation rédigées en Allemand, Français et Italien. Nous disposons d'accords avec un large réseau d'entreprises spécialisées en dépôts de marques et de brevets, situées tant en Europe qu'au Japon, en Australie, au Canada et en Amérique du Sud. Ces correspondants nous représentent dans leurs pays.</p>
-            <p>Nos partenaires sont membres des Barreaux de New York, du New Jersey, de la Georgia et du New Hampshire.</p>
-        </section>
-    </section>
-</div>
+<section class="lang-rows">
+  <h1>About Us</h1>
+  <div class="tabbed">
+    <h2 lang="en" id="tab-en" class="current">English</h2>
+    <h2 lang="fr" id="tab-de">Deutsche</h2>
+    <h2 lang="de" id="tab-fr">Français</h2>
+  </div>
+  <section lang="en">
+    <aside><img src="img/gshot.jpg" />
+    </aside>
+    <p>
+      <strong>KF ROSS PC</strong>, founded as the Firm of Karl F. Ross PC by the late Karl F. Ross in 1948 and joined by the late Herbert Dubno in 1958, specializes in the preparation and prosecution of patent and trademark applications.
+    </p>
+    <p>
+      Each year, <strong>KF ROSS PC</strong> files about 200 new patent applications and 100-150 new trademark applications. We also provide assistance in complex litigation matters up to the appeal level in the federal-court system.
+    </p>
+    <p>
+      The majority of our work originates in Germany, Austria, Italy, Hungary, France and Japan and we are able to deal directly with instructions and documents in German, French and Italian. We have extensive connections and working arrangements with patent firms in Europe, Japan, Australia, Canada and South America for the filing of patent and trademark applications in those countries.
+    </p>
+    <p>
+      Our partners are members of the bars of New York, New Jersey, Georgia and New Hampshire.
+    </p>
+  </section>
+  <section lang="de" class="hidden">
+    <aside><img src="img/gshot.jpg" />
+    </aside>
+    <p>
+      <strong>KF ROSS PC</strong> ist spezialisiert auf Erwerb, Aufrechterhaltung und Durchsetzung gewerblicher Patent- und Markenanmeldungen. Die heute aus zwei Partnern bestehende Kanzlei wurde 1948 von Karl. F. Ross gegründet, 1958 trat Herbert Dubno in die Kanzlei ein.
+    </p>
+    <p>
+      Jährlich reicht <strong>KF ROSS PC</strong> ungefahr 200 neue Patentanmeldungen und etwa 100 bis 150 neue Markenanmeldungen beim US amerikanischen Patent- und Markenamt ein. Darüber hinaus unterstützen wir unsere Mandanten bei komplexen Rechtsstreitigkeiten bis hin zur Berufungsinstanz auf Bundesebene.
+    </p>
+    <p>
+      Die Mehrheit unserer Mandanten kommen aus Deutschland und Österreich, sowie Italien, Ungarn, Frankreich, und Japan. Anweisungen und Dokumente auf Deutsch, Französisch und Italienisch können direkt von uns bearbeitet werden. Wir haben weitreichende Kontakte zu Korrespondenzkanzleien für Patent- und Markenrecht in Europa, Japan, Australien, Kanada und Südamerika, somit können wir für unsere Mandanten in den genannten Ländern ebenfalls Patent- und Markenanmeldungen durchführen.
+    </p>
+    <p>
+      Unsere Partner sind Mitglieder bei den Anwaltsvereinigungen in New York, New Jersey, Georgia und/oder New Hampshire.
+    </p>
+  </section>
+  <section lang="fr" class="hidden">
+    <aside><img src="img/gshot.jpg" />
+    </aside>
+    <p>
+      <strong>KF ROSS PC</strong> a été fondée en 1948 par le regretté Karl F Ross. Il fut rejoint, en 1958, par Herbert Dubno, aujourd'hui décédé. Nous sommes spécialisés dans la préparation et les procédures de demandes de brevets et de dépôts de marques.
+    </p>
+    <p>
+      Nous nous occupons, chaque année, d'environ 200 nouveaux brevets et 100 à 150 demandes de dépôts de nouvelles marques. Nous pouvons aussi vous assister dans les litiges complexes jusqu'en Cour d'Appel dans le système juridique américain des Cours Fédérales.
+    </p>
+    <p>
+      Le plus gros de nos activités provient de l'étranger, notamment d'Allemagne, d'Italie, de France, de Hongrie et du Japon. Nous savons aussi traiter les demandes et la documentation rédigées en Allemand, Français et Italien. Nous disposons d'accords avec un large réseau d'entreprises spécialisées en dépôts de marques et de brevets, situées tant en Europe qu'au Japon, en Australie, au Canada et en Amérique du Sud. Ces correspondants nous représentent dans leurs pays.
+    </p>
+    <p>
+      Nos partenaires sont membres des Barreaux de New York, du New Jersey, de la Georgia et du New Hampshire.
+    </p>
+  </section>
+</section>
